# SISIFOS

./: .gitignore  Earth.blend  README.md  TODO.md  addon_ground_truth_generation_new.py  analyze_gtvalues.py  build_model_scene.py  config.json  focal_vals.json  generateTrajectoriesUnified.py  generate_trajectory_main.py  main.py  math_function.py  postprocess_npz.py  pyproject.toml  segmentation_map_test.py  sisifos_render.py  test_render.py  ue5_function.py  video_gen.py
.github/workflows/: ci.yml
assets/: Earth.blend
configs/: Integral_Trajectory.json  ci_test.json  earth_in_bg.json  gateway_tumbling_hubblelike.json  gpu_benchmark.json  hubble_inertial_10hz_A.json  hubble_traj.json  hubble_trajectory_sweep.json  hubble_tumbling_10hz.json  hubble_tumbling_10hz_A.json  hubble_tumbling_10hz_B.json  integral_camera.json  integral_focal_length_sweep.json  integral_inertial_10hz_A.json  integral_inertial_10hz_sweep.json  integral_multimode_camera.json  integral_screened_1.json  integral_screened_2.json  integral_screened_3.json  integral_traj.json  integral_traj_hybrid.json  integral_trajectory_sweep.json  integral_tumbling_10hz.json  integral_tumbling_10hz_A.json  integral_tumbling_10hz_B.json  integral_tumbling_hubblelike copy.json  multi_model_preview.json  observability_sweep.json  proba3_tumbling_10hz.json  rotate_const_sweep.json  s1_match.json  test_integral.json  test_mc_traj.json
configs/examples/: config_example_basic.json  example-sampling.json  example_path.json  example_trajectory_generation.json  example_trajectory_generation_sweep_test.json  multi_model_demo.json  rotate_const_sweep.json  sweep_configs.json
env/: Activate.ps1  Setup.ps1  activate.sh  pyproject.toml  setup.sh
modules/: ConfigInfo.md  addon_ground_truth_generation.py  blender_utils.py  config.py  depth_worker.py  geometry.py  io_utils.py  log_utils.py  renderer.py  spacecraft_defaults.yaml  trajectory.py  view_scene_animations.py  vis_utils.py
modules/trajectory/: generateTrajectoriesUnified.py  math_utils.py  motion_cases.py  plot_figure.py  sampling_trajectory.py  seed_screening.py  trajectory.py  trajectory_io.py  trajectory_math.py  ue5_function.py
scripts/: continue_render.py
tests/: create_ci_assets.py  run_in_blender.py  test_animation_renderer.py  test_camera_intrinsics.py  test_config.py  test_e2e_pipeline.py  test_gt_pipeline.py  test_import_safety.py  test_motion_cases.py  test_run_sweep_ordering.py  test_screening_resample.py  test_seed_screening.py  test_trajectory_generation.py  test_trajectory_math.py
