[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sisifos"
version = "0.1.0"
description = "Specialized Illumination Simulator For Orbiting Spacecraft"
requires-python = ">=3.10"
dependencies = [
    "embreex>=2.17.7.post7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "rtree>=1.4.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "trimesh>=4.11.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
py-modules = ["main", "video_gen", "build_model_scene", "addon_ground_truth_generation"]

[tool.ruff.lint.per-file-ignores]
"modules/addon_ground_truth_generation.py" = ["E402"]
"modules/trajectory/generateTrajectoriesUnified.py" = ["E402"]
"modules/config.py" = ["E741"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length (handled by formatter)
    "E203",  # whitespace before : (conflicts with Black-style)
]

[tool.ruff.lint.isort]
known-first-party = ["sisifos"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"